# ui-autotest-demo

./: Jenkinsfile  PROJECT_SUMMARY.md  README.md  config.yaml  conftest.py  debug_toast.py  fix_appium_env.py  get_elements.py  pyproject.toml  quick_start.py  requirements.txt  run_tests.bat  run_tests.py  run_tests.sh
reports/html/: test_report.html
src/config/: config.py
src/core/: __init__.py  appium_server.py  driver_manager.py
src/pages/: __init__.py  base_page.py
src/pages/app/: __init__.py  home_page.py  login.xml  login_page.py
src/tests/: base_test.py
src/tests/app/: test_login.py
src/tests/data/: test_data.json
src/ui_autotest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: __init__.py  app_info_extractor.py  assertions.py  data_manager.py  logger.py  report_manager.py  screenshot.py
